--- a/MVVMbit/MVVMbit.csproj
+++ b/MVVMbit/MVVMbit.csproj
@@ -39,6 +39,7 @@
       <DependentUpon>MVVMbitPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\Shoes.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
